[package]
name = "curious_owl"
version = "0.1.0"
edition = "2021"

[dependencies]
rdev = "0.5.3"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
aes-gcm = "0.10.0" # Or the latest version
rand = "0.8.5"     # For generating a random nonce
hex = "0.4"
serde_json = "1.0.134"
clap = { version = "4.1", features = ["derive"] }